<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="2dp"
    android:paddingLeft="2dp"
    android:paddingRight="2dp"
    android:paddingTop="4dp">

    <com.deakishin.cipherworld.gui.SquareFrameLayout
        android:id="@+id/cipher_symbol_item_panel"
        style="@style/CipherSymbolItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/cipher_symbol_letter_textView"
            style="@style/CipherSymbolLetterTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <View
            android:id="@+id/cipher_symbol_item_highlight"
            style="@style/CipherSymbolHighlightView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"/>

    </com.deakishin.cipherworld.gui.SquareFrameLayout>

</LinearLayout>